# xmdf

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _clang-format  build.py  conanfile.py  condabuildinfo.cmake  generateDocumentationAndDeploy.sh
Doxygen/: Doxyfile  DoxygenMainpage.md  Stamper_Tutorial.md
dev/: CMakeLists.txt  Setup_cpp.bat  Setup_py.bat  Test_py.bat  changes.txt  setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_py
test_files/: Geompath_a_file_f.h5  Geompath_a_file_f_out.txt  MultiDataSet_c.h5  MultiDataSet_c.txt  ScalarA_c.txt  ScalarA_edited_f.h5  ScalarA_edited_f.txt  ScalarA_f.h5  ScalarB_c.h5  ScalarB_f.h5  ScalarB_f.txt  TT_ScalarA_c.h5  TT_Vector2D_A_c.h5  Vector2D_B_c.h5  Vector2D_B_f.h5  geompath_a_file_c_out.txt  grid_cart2d_a_file_c.h5  grid_cart2d_a_out_cf.txt  grid_cart3d_a_file_c.h5  grid_cart3d_a_out_cf.txt  grid_cart3d_a_out_fc.txt  grid_curv2d_a_file_f.h5  mesh_a_file_f.h5  mesh_b_file_fc.txt  mydiff.bat
test_files/stamping/test_GuideBank01/: test_gb1.map  test_gb1.sms  test_gb1_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_GuideBank02/: test_gb2.map  test_gb2.sms  test_gb2_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_GuideBank03/: test_gb3.map  test_gb3.sms  test_gb3_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_GuideBank04/: test_gb4.map  test_gb4.sms  test_gb4_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_GuideBank05/: test_gb5.map  test_gb5.sms  test_gb5_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_GuideBank06/: test_gb6.map  test_gb6.sms  test_gb6_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_GuideBank07/: test_gb7.map  test_gb7.sms  test_gb7_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_GuideBank08_cut/: test_gb08_cut.map  test_gb08_cut.materials  test_gb08_cut.sms  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_SlopedAbutment01/: test_sa01.map  test_sa01.sms  test_sa01_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_SlopedAbutment02/: test_sa02.map  test_sa02.sms  test_sa02_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_SlopedAbutment03/: test_sa03.map  test_sa03.sms  test_sa03_TEST1.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_WingWall01/: test1.map  test1.sms  test1_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_WingWall02/: test2.map  test2.sms  test2_TEST2.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_WingWall03/: test3.map  test3.sms  test3_TEST3.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_intersectBathymetry01/: test_si01.map  test_si01.sms  test_si01_Bathemetry.h5  test_si01_Scatter.h5  test_si01_TEST1.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_intersectBathymetry02/: test_si02.map  test_si02.sms  test_si02_Scatter.h5  test_si02_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_intersectBathymetry03/: test_si03.map  test_si03.sms  test_si03_Scatter.h5  test_si03_TEST1.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_intersectBathymetry04/: test_si04.map  test_si04.sms  test_si04_Bathemetry.h5  test_si04_TEST1.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_intersectBathymetry05/: test_si05.sms  test_si05_Bathemetry.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_intersectBathymetry06/: test_si06.map  test_si06.sms  test_si06_Bathemetry.h5  test_si06_TEST1.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_intersectBathymetry07/: test_si07.sms  test_si07_Bathymetry.h5  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_intersectBathymetry08/: test_si08.map  test_si08.sms  test_si08_Bathymetry.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_intersectBathymetry09/: test_si09.sms  test_si09_Bathymetry.h5  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_intersectBathymetry10/: test_si10.sms  test_si10_Bathymetry.h5  xmsng_StamperIo.txt  xmsng_out.txt
test_files/stamping/test_intersections/: intersect.map  intersect.sms  intersect_TEST1.h5  xmsng_StamperIo.txt
test_files/stamping/test_slopedAbutment04_cut/: test_sa04_cut.map  test_sa04_cut.sms  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_out.txt
test_files/stamping/test_wingWall04_cut/: test_ww04_cut.map  test_ww04_cut.sms  xmsng_StamperIo.txt  xmsng_out.txt
test_files/test_out_f1/: Geompath_a_file_f.h5  MultiDataSet_f.h5  ScalarB_f.h5  TT_MultiDataSet_f.h5  TT_ScalarA_f.h5  Vector2D_B_f.h5  grid_cart3d_a_file_f.h5
test_files/test_out_f2/: MultiDataSet_c.h5  MultiDataSet_f.h5  ScalarA_Pieces_alt_c.h5  ScalarA_Pieces_c.h5  ScalarA_edited_f.h5  ScalarA_f.h5  ScalarA_f.txt  TT_MultiDataSet_c.h5  TT_MultiDataSet_c.txt  TT_ScalarA_c.h5  TT_ScalarA_f.h5  TT_Vector2D_A_c.h5  Vector2D_A_Pieces_c.h5  Vector2D_A_c.h5  Vector2D_A_f.h5  Vector2D_A_fc.txt  grid_cart2d_a_file_c.h5  grid_cart2d_a_out_fc.txt  grid_curv2d_a_out_c.txt  grid_curv2d_a_out_cf.txt  mesh_a_file_c.h5  mesh_a_file_f.txt  mesh_b_file_f.txt
test_package/: conanfile.py  example.cpp
xmdf/: szlibdx64.lib  szlibx64.lib  zlibdx64.lib  zlibx64.lib
xmdf/test/C/source/: CMakeLists.txt  StdAfx.cpp  TestDatasets.cpp  TestGeomPaths.cpp  TestGrid.cpp  TestMesh.cpp  TestTimestep.cpp  TestXmdf.cpp
xmdf/test/Compare/: clean.bat  compare.bat  test.bat
xmdf/test/FORTRAN/: CMakeLists.txt
xmdf/xmdf/: Xmdf.c  Xmdf_f.c  xmdf_private.c  xmdf_timestep.c
xmdf/xmdf/xmdf/: Xmdf.h  Xmdf_f.h  xmdf_private.h  xmdf_timestep.h
xmsstamper/python/: xmsstamper_py.cpp
xmsstamper/python/stamper/: XmStamperIo_py.cpp  (+4 more)
xmsstamper/stamper/: TutStamping.cpp  TutStamping.t.h  XmStamper.cpp  XmStamper.h  XmStamperIo.cpp  XmStamperIo.h
(+98 files in other folders)
